--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ h6 {
   top: 20px;
   bottom: 0;
   z-index: -1;
-  box-shadow:  0px -45px 45px -40px #ffffff33;
+  box-shadow: 0px -45px 45px -40px #ffffff33;
 }
 .infoBox::after {
   content: "";
@@ -302,7 +302,7 @@ h6 {
   top: 20px;
   bottom: 0;
   z-index: -1;
-  box-shadow:  0px 45px 45px -40px #ffffff33;
+  box-shadow: 0px 45px 45px -40px #ffffff33;
 }
 .infoBox .infoImage {
   border: 2px solid #d8dae4;
@@ -378,7 +378,7 @@ h6 {
   right: 0;
   bottom: 0;
   z-index: 1;
-  box-shadow: inset 0px 105px 55px -40px #222831;
+  box-shadow: inset 0px 95px 55px -40px #222831;
 }
 @media (min-width: 1440px) {
   .register::before {
@@ -400,30 +400,16 @@ h6 {
   transform: translateX(-50%) rotate(0deg);
 }
 
-.form-register {  
-  background: #222831;
-  border-radius: 20px;
-  overflow: hidden;
+.form-register {
+  background: linear-gradient(#222831, #36404ea1);
   position: relative;
   max-width: 800px;
   width: 100%;
   z-index: 2;
-  transition: .4s ease-out;
+  border: 2px solid #e9ecf827;
+  border-radius: 20px;
 }
-.form-register .form-group {
-  position: relative;
-}
-.register .form-register .form-group .form-control {
-  color: #333;
-  transition: all 0.2s ease;
-  border-bottom: 1.5px solid #aaaaaa;
-}
-.register .form-register .form-group .form-control:focus {
-  border: none;
-  outline: none;
-  box-shadow: none;
-}
-.register .form-register  .form-title {
+.form-register .form-title {
   font-weight: 700;
   font-size: 36px;
   color: #e9ecf8;
@@ -431,9 +417,63 @@ h6 {
   text-transform: uppercase;
 }
 @media (max-width: 768px) {
-  .register .form-register  .form-title {
+  .form-register .form-title {
     text-transform: capitalize;
     font-size: 32px;
   }
 }
+.form-register .form-group {
+  font-family: "Segoe UI", sans-serif;
+  position: relative;
+  color: #d8dae4;
+}
+.form-register .form-group .form-control {
+  font-size: 100%;
+  color: #d8dae4;
+  outline: none;
+  border: 2px solid #e9ecf87e;
+  background-color: transparent;
+  border-radius: 6px;
+  transition: 0.4s ease-in-out;
+  width: 100%;
+}
+.form-register .form-group .form-label {
+  color: #e9ecf8bd;
+}
+.form-register .form-group .form-control:focus,
+.form-control:valid {
+  outline: none;
+  border: 2px solid #e9ecf8;
+  box-shadow: none;
+}
+.form-register .form-check-label {
+  color: #e9ecf8c2;
+}
+.form-register .form-check-label a {
+  text-decoration: none;
+  color: #e6e8f0;
+}
+.form-register .btr {
+  position: relative;
+  height: 3.5em;
+  border: 3px ridge #e9ecf87e;
+  border-radius: 6px;
+  outline: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  background-color: transparent;
+  color: #e9ecf8bd;
+  transition: 0.3s ease;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.form-register .btr:hover {
+  color: #e9ecf8;
+  border: 3px solid #e9ecf8;
+}
 /* Stopek */
+
+.footer {
+
+}
