--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,7 +14,7 @@ li {
 }
 body,
 html {
-  background: #222831 !important;
+  background: #2c323b !important;
 }
 img {
   max-width: 100%;
@@ -28,4 +28,8 @@ h4,
 h5,
 h6 {
   font-weight: 700;
+}
+
+.header {
+
 }
