--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url(components/modal.css);
 /* Globalne Atrybuty */
 * {
   margin: 0;
   padding: 0;
+  font-family: Arial, sans-serif;
   box-sizing: border-box;
-  font-family: "Montserrat";
 }
 a {
   text-decoration: none;
@@ -14,7 +14,7 @@ li {
 }
 body,
 html {
-  background: #2c323b !important;
+  background: #2d333e !important;
 }
 img {
   max-width: 100%;
@@ -31,5 +31,166 @@ h6 {
 }
 
 .header {
+  background: #fff;
+  position: relative;
+  z-index: 3;
+}
+.header nav .navbar-toggler {
+  color: #2d333e;
+  border-color: rgb(45, 51, 62);
 
 }
+.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(45, 51, 62)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+.header nav .navbar-toggler:focus {
+  box-shadow: none;
+  outline: none;
+}
+.header nav .navbar-brand {
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #2d333e;
+}
+@media (max-width: 768px) {
+  .header nav .navbar-brand {
+    font-size: 16px;
+  }
+}
+.header nav .nav-link {
+  font-size: 14px;
+  letter-spacing: 0.1rem;
+  position: relative;
+  display: inline-block;
+  text-transform: uppercase;
+  color: #2d333e;
+}
+.header nav .nav-link::before,
+.header nav .nav-link::after {
+  content: "";
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  transition: all 0.35s ease;
+  opacity: 0;
+}
+.header nav .nav-link::before {
+  content: "";
+  right: 0;
+  top: 0;
+  border-top: 3px solid #2d333e;
+  border-right: 3px solid #2d333e;
+  transform: translate(-100%, 50%);
+}
+.header nav .nav-link:after {
+  content: "";
+  left: 0;
+  bottom: 0;
+  border-bottom: 3px solid #2d333e;
+  border-left: 3px solid #2d333e;
+  transform: translate(100%, -50%);
+}
+.header nav .nav-link:hover:before,
+.header nav .nav-link:hover:after {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .header nav .nav-link:hover:before,
+  .header nav .nav-link:hover:after {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+}
+.search-box{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  z-index: 0;
+}
+.input-search{
+  height: 50px;
+  width: 400px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  transition: all .5s ease-in-out;
+  background-color: #2d333e;
+  padding-right: 40px;
+  color: #2d333e;
+}
+.input-search::placeholder{
+  color: #ffffff77;
+  font-size: 14px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color: #2d333e;
+  background-color:transparent;
+  pointer-events: painted;  
+}
+.btn-search i {
+  color: #fff; 
+}
+.input-search:focus,
+.btn-search:focus ~ .input-search {
+  border-radius: 12px;
+  border-bottom: 4px solid #4e6da8;
+  color: #fff; 
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.input-nofi{
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 14px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all .5s ease-in-out;
+  background-color: #2d333e;
+  padding-right: 40px;
+  color: #ffffff77;
+}
+.btn-nofi{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color: #2d333e;
+  background-color:transparent;
+  pointer-events: painted;  
+}
+.btn-nofi i {
+  color: #fff; 
+}
+.input-nofi:hover,
+.btn-nofi:hover ~ .input-nofi {
+  border-radius: 12px;
+  border-bottom: 4px solid #4e6da8;
+  color: #fff; 
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
