--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,7 @@
 @import url(components/modal.css);
+@import url(components/search-button.css);
+@import url(components/notification-button.css);
+@import url(components/message-button.css);
 /* Globalne Atrybuty */
 * {
   margin: 0;
@@ -14,7 +17,7 @@ li {
 }
 body,
 html {
-  background: #2d333e !important;
+  background: #2d333e;
 }
 img {
   max-width: 100%;
@@ -31,9 +34,9 @@ h6 {
 }
 
 .header {
-  background: #fff;
   position: relative;
-  z-index: 3;
+  overflow: hidden;
+  z-index: 1;
 }
 .header nav .navbar-toggler {
   color: #2d333e;
@@ -103,94 +106,11 @@ h6 {
     opacity: 0;
   }
 }
+
 .search-box{
   width: fit-content;
   height: fit-content;
   position: relative;
   z-index: 0;
-}
-.input-search{
-  height: 50px;
-  width: 400px;
-  border-style: none;
-  padding: 10px;
-  font-size: 18px;
-  letter-spacing: 2px;
-  outline: none;
-  transition: all .5s ease-in-out;
-  background-color: #2d333e;
-  padding-right: 40px;
-  color: #2d333e;
-}
-.input-search::placeholder{
-  color: #ffffff77;
-  font-size: 14px;
-  letter-spacing: 2px;
-  font-weight: 100;
-}
-.btn-search{
-  width: 50px;
-  height: 50px;
-  border-style: none;
-  font-size: 20px;
-  font-weight: bold;
-  outline: none;
-  cursor: pointer;
-  border-radius: 50%;
-  position: absolute;
-  right: 0px;
-  color: #2d333e;
-  background-color:transparent;
-  pointer-events: painted;  
-}
-.btn-search i {
-  color: #fff; 
-}
-.input-search:focus,
-.btn-search:focus ~ .input-search {
-  border-radius: 12px;
-  border-bottom: 4px solid #4e6da8;
-  color: #fff; 
-  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
-
-.input-nofi{
-  height: 50px;
-  width: 50px;
-  border-style: none;
-  padding: 10px;
-  font-size: 14px;
-  letter-spacing: 2px;
-  outline: none;
-  border-radius: 25px;
-  transition: all .5s ease-in-out;
-  background-color: #2d333e;
-  padding-right: 40px;
-  color: #ffffff77;
-}
-.btn-nofi{
-  width: 50px;
-  height: 50px;
-  border-style: none;
-  font-size: 20px;
-  font-weight: bold;
-  outline: none;
-  cursor: pointer;
-  border-radius: 50%;
-  position: absolute;
-  right: 0px;
-  color: #2d333e;
-  background-color:transparent;
-  pointer-events: painted;  
-}
-.btn-nofi i {
-  color: #fff; 
-}
-.input-nofi:hover,
-.btn-nofi:hover ~ .input-nofi {
-  border-radius: 12px;
-  border-bottom: 4px solid #4e6da8;
-  color: #fff; 
-  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
