--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
 @import url(components/modal.css);
-@import url(components/search-button.css);
-@import url(components/notification-button.css);
-@import url(components/message-button.css);
+@import url(components/navbar-button.css);
+@import url(components/navbar.css);
+@import url(components/main.css);
 /* Globalne Atrybuty */
 * {
   margin: 0;
@@ -14,10 +14,6 @@ a {
 }
 li {
   list-style: none;
-}
-body,
-html {
-  background: #2d333e;
 }
 img {
   max-width: 100%;
@@ -32,84 +28,7 @@ h5,
 h6 {
   font-weight: 700;
 }
-
-.header {
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-.header nav .navbar-toggler {
-  color: #2d333e;
-  border-color: rgb(45, 51, 62);
-
-}
-.navbar-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(45, 51, 62)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
-}
-.header nav .navbar-toggler:focus {
-  box-shadow: none;
-  outline: none;
-}
-.header nav .navbar-brand {
-  font-size: 24px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #2d333e;
-}
-@media (max-width: 768px) {
-  .header nav .navbar-brand {
-    font-size: 16px;
-  }
-}
-.header nav .nav-link {
-  font-size: 14px;
-  letter-spacing: 0.1rem;
-  position: relative;
-  display: inline-block;
-  text-transform: uppercase;
-  color: #2d333e;
-}
-.header nav .nav-link::before,
-.header nav .nav-link::after {
-  content: "";
-  height: 14px;
-  width: 14px;
-  position: absolute;
-  transition: all 0.35s ease;
-  opacity: 0;
-}
-.header nav .nav-link::before {
-  content: "";
-  right: 0;
-  top: 0;
-  border-top: 3px solid #2d333e;
-  border-right: 3px solid #2d333e;
-  transform: translate(-100%, 50%);
-}
-.header nav .nav-link:after {
-  content: "";
-  left: 0;
-  bottom: 0;
-  border-bottom: 3px solid #2d333e;
-  border-left: 3px solid #2d333e;
-  transform: translate(100%, -50%);
-}
-.header nav .nav-link:hover:before,
-.header nav .nav-link:hover:after {
-  transform: translate(0, 0);
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .header nav .nav-link:hover:before,
-  .header nav .nav-link:hover:after {
-    transform: translate(0, 0);
-    opacity: 0;
-  }
-}
-
 .search-box{
-  width: fit-content;
-  height: fit-content;
   position: relative;
   z-index: 0;
 }
