--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,6 +2,7 @@
 @import url(components/navbar-button.css);
 @import url(components/navbar.css);
 @import url(components/main.css);
+@import url(login.css);
 /* Globalne Atrybuty */
 * {
   margin: 0;
