--- a/src/styles/components/navbar-button.css
+++ b/src/styles/components/navbar-button.css
@@ -75,3 +75,17 @@
   background-color: #3c5075;
   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
 }
+
+.input-settings {
+  border-style: none;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  outline: none;
+  border-radius: 12px;
+  transition: 0.5s ease-in-out;
+  background-color: #3c5075;
+  box-shadow: 0px 0px 3px #454e5f;
+  padding-right: 40px;
+  color: #fff;
+}
