--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h6 {
   font-weight: 700;
 }
 .header {
-  z-index: 1999;
+  z-index: 1;
   position: absolute;
   width: 100%;
 }
@@ -107,6 +107,7 @@ h6 {
 /* Sekcja Hero */
 .hero {
   width: 100%;
+  max-width: 100%;
   height: 900px;
   position: relative;
   overflow: hidden;
@@ -261,9 +262,6 @@ h6 {
     width: 8em;
   }
 }
-.hero .hero-image {
-  z-index: 2;
-}
 .hero .hero-image .banner {
   position: absolute;
   bottom: 0;
@@ -273,8 +271,6 @@ h6 {
 /* Sekcja Info */
 .info {
   position: relative;
-  min-height: 1200px;
-  height: 100%;
 }
 .infoBox {
   position: relative;
@@ -446,6 +442,10 @@ h6 {
   border: 2px solid #e9ecf8;
   box-shadow: none;
 }
+.form-register .form-group .form-control::placeholder {
+  color: #d8dae4;
+  opacity: 0.5;
+}
 .form-register .form-check-label {
   color: #e9ecf8c2;
 }
@@ -571,4 +571,77 @@ h6 {
   .footer .btn-starts {
     width: 8em;
   }
+}
+/* Modal Logowania */
+.modal {
+  position: relative;
+}
+.login-modal .modal {
+  backdrop-filter: blur(30px);
+}
+.login-modal .modal-content {
+  background: linear-gradient(#222831, #36404ea1);
+  position: relative;
+  max-width: 800px;
+  width: 100%;
+  z-index: 2;
+  color: #e6e8f0;
+  border: 2px solid #e9ecf827;
+  border-radius: 20px;
+}
+.login-modal .modal-content .btn-close {
+  color: #e6e8f0 !important;
+}
+.modal-content .form-group {
+  font-family: "Segoe UI", sans-serif;
+  position: relative;
+  color: #d8dae4;
+}
+.modal-content .form-group .form-control {
+  font-size: 100%;
+  color: #d8dae4;
+  outline: none;
+  border: 2px solid #e9ecf87e;
+  background-color: transparent;
+  border-radius: 6px;
+  transition: 0.4s ease-in-out;
+  width: 100%;
+}
+.modal-content .form-group .form-label {
+  color: #e9ecf8bd;
+}
+.modal-content .form-group .form-control:focus,
+.form-control:valid {
+  outline: none;
+  border: 2px solid #e9ecf8;
+  box-shadow: none;
+}
+.modal-content .form-control::placeholder {
+  color: #d8dae4;
+  opacity: 0.5;
+}
+.modal-content .form-check-label {
+  color: #e9ecf8c2;
+}
+.modal-content .btr {
+  position: relative;
+  height: 3em;
+  border: 3px ridge #e9ecf87e;
+  border-radius: 6px;
+  outline: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  background-color: transparent;
+  color: #e9ecf8bd;
+  transition: .4s ease-in-out;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.modal-content .btr:hover {
+  color: #e9ecf8;
+  border: 3px solid #e9ecf8;
+}
+.modal-backdrop.show {
+  z-index: 3;
 }
