--- a/src/styles/components/navbar-button.css
+++ b/src/styles/components/navbar-button.css
@@ -1,19 +1,10 @@
-.input-search {
-  width: 400px;
-  border-style: none;
-  padding: 10px;
-  font-size: 14px;
-  letter-spacing: 2px;
-  outline: none;
-  transition: 0.3s ;
-  background-color: #2d333e;
-  border-radius: 12px;
-  color: #fff;
+input {
+  background: none;
 }
-.input-search::placeholder {
-  color: #ffffff77;
-  font-size: 14px;
-  font-weight: 100;
+
+.search-box{
+  position: relative;
+  z-index: 0;
 }
 .input-wrapper {
   display: flex;
@@ -34,18 +25,18 @@
   outline: none;
   border-radius: 12px;
   transition: 0.5s ease-in-out;
-  background-color: #3c5075;
-  box-shadow: 0px 0px 3px #454e5f;
   padding-right: 40px;
-  color: #fff;
+  color: #d8dae4;
 }
 
+
 .input::placeholder, .input {
-  font-size: 17px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .input::placeholder {
-  color: #ffffff77;
+  color: #ffffffbe;
 }
 
 .icon {
@@ -53,27 +44,28 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: 0px;
+  right: 0;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 22px;
   width: 50px;
   height: 50px;
   outline: none;
   border-style: none;
   border-radius: 12px;
   pointer-events: painted;
-  color: #fff;
+  color: #ffffff;
   background-color: transparent;
   transition: 0.2s linear;
 }
 
-.icon:focus ~ .input,
-.input:focus {
+
+.icon:hover ~ .input,
+.input:hover {
   box-shadow: none;
-  width: 350px;
   border-radius: 12px;
-  background-color: #3c5075;
-  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+  background-color: #414874;
+  transition: 0.4s cubic-bezier(0, 0.11, 0.35, 2);
+  outline: none;
 }
 
 .input-settings {
@@ -83,9 +75,44 @@
   padding: 10px;
   outline: none;
   border-radius: 12px;
-  transition: 0.5s ease-in-out;
-  background-color: #3c5075;
-  box-shadow: 0px 0px 3px #454e5f;
+  transition: 0.4s ease-in-out;
   padding-right: 40px;
-  color: #fff;
+  color: #222831;
+}
+
+
+.input-search {
+  border-style: none;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  outline: none;
+  border-radius: 12px;
+  transition: 0.4s ease-in-out;
+  padding-right: 40px;
+  color: #d8dae4;
+}
+
+.input-search::placeholder, .input-search {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.input-search::placeholder {
+  color: #ffffffbe;
+}
+
+
+.icon:focus ~ .input-search,
+.input-search:focus {
+  box-shadow: none;
+  width: 350px;
+  border-radius: 12px;
+  background-color: #414874;
+  transition: 0.4s cubic-bezier(0, 0.11, 0.35, 2);
+  outline: none;
+}
+
+.icon:hover ~ .input-search {
+  background-color: #414874;
 }
