--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,26 +1,7 @@
 .header {
   position: relative;
-  overflow: hidden;
-  background: #fff;
   z-index: 1;
-}
-.navbar-top .title-header {
-  width: 100%;
-  height: 300px;
-  position: relative;
-  background: url(../../img/home_bg22.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  z-index: 0;
-}
-@media (min-width: 1200px) {
-  .title-header {
-    background-attachment: fixed;
-  }
-}
-.navbar-bottom {
-  position: relative;
+  background: #222831 ;
 }
 .header nav .navbar-toggler {
   color: #2d333e;
