--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,9 @@
-@import url(components/modal.css);
 @import url(components/navbar-button.css);
+@import url(components/navbar-coins.css);
 @import url(components/navbar.css);
-@import url(components/main.css);
+@import url(components/sidebar.css);
+@import url(templates/home.css);
+
 /* Globalne Atrybuty */
 * {
   margin: 0;
@@ -12,6 +14,11 @@
 a {
   text-decoration: none;
 }
+body,
+html {
+  background: #222831 !important;
+}
+
 li {
   list-style: none;
 }
@@ -28,4 +35,5 @@ h5,
 h6 {
   font-weight: 700;
 }
+
 
