--- a/src/styles/components/navbar-button.css
+++ b/src/styles/components/navbar-button.css
@@ -23,10 +23,10 @@ input {
   width: 50px;
   padding: 10px;
   outline: none;
-  border-radius: 12px;
+  border-radius: 24px;
   transition: 0.5s ease-in-out;
   padding-right: 40px;
-  color: #d8dae4;
+  background-color: #eff2ff;
 }
 
 
@@ -50,21 +50,29 @@ input {
   width: 50px;
   height: 50px;
   outline: none;
-  border-style: none;
-  border-radius: 12px;
+  border: 2px solid #eff2ffb0;
+  border-radius: 24px;
   pointer-events: painted;
-  color: #ffffff;
+  color: #222831;
   background-color: transparent;
   transition: 0.2s linear;
 }
 
 
+.icon:hover ~ .input-search, 
+.input-search:hover {
+  box-shadow: none;
+  background-color: #eff2ff;
+  border-radius: 12px;
+  transition: 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+  outline: none;
+}
 .icon:hover ~ .input,
 .input:hover {
   box-shadow: none;
+  background-color: #eff2ff;
   border-radius: 12px;
-  background-color: #414874;
-  transition: 0.4s cubic-bezier(0, 0.11, 0.35, 2);
+  transition: 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   outline: none;
 }
 
@@ -74,10 +82,9 @@ input {
   width: 50px;
   padding: 10px;
   outline: none;
-  border-radius: 12px;
+  border-radius: 24px;
   transition: 0.4s ease-in-out;
   padding-right: 40px;
-  color: #222831;
 }
 
 
@@ -87,10 +94,10 @@ input {
   width: 50px;
   padding: 10px;
   outline: none;
-  border-radius: 12px;
+  background-color: #eff2ff;
+  border-radius: 24px;
   transition: 0.4s ease-in-out;
   padding-right: 40px;
-  color: #d8dae4;
 }
 
 .input-search::placeholder, .input-search {
@@ -99,7 +106,7 @@ input {
 }
 
 .input-search::placeholder {
-  color: #ffffffbe;
+  color: #222831;
 }
 
 
@@ -108,11 +115,7 @@ input {
   box-shadow: none;
   width: 350px;
   border-radius: 12px;
-  background-color: #414874;
-  transition: 0.4s cubic-bezier(0, 0.11, 0.35, 2);
+  background-color: #eff2ff;
+  transition: 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   outline: none;
-}
-
-.icon:hover ~ .input-search {
-  background-color: #414874;
 }
