--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,7 +1,105 @@
 .header {
   position: relative;
   z-index: 1;
-  background: #222831 ;
+  overflow: hidden;
+}
+.header-content {
+  height: 200px;
+  width: 100%;
+  position: relative;
+  background: url(../../img/home_bg22.jpg);
+  background-size: cover;
+  z-index: 2;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.header-content::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #323b49ab;
+  z-index: 0;
+  transform: translateX(-50%) rotate(0deg);
+}
+.header-overlay {
+  width: 80px;
+  height: 3px;
+  background: #eff2ffab;
+  position: absolute;
+}
+.header-overlay:nth-child(1) {
+  animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
+  animation-duration: 0.75s;
+  animation-delay: 1.35s;
+  animation: overlay 6s ease infinite alternate;
+}
+
+.header-overlay:nth-child(2) {
+  animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
+  animation-duration: 0.95s;
+  animation-delay: 2s;
+  animation: overlay2 6s ease infinite alternate;
+}
+@keyframes overlay {
+  0% {
+    top: 0;
+    left: 35px;
+  }
+
+  50% {
+    top: 0;
+    left: 50%;
+  }
+
+  100% {
+    top: 0;
+    left: 35px;
+  }
+}
+@keyframes overlay2 {
+  0% {
+    bottom: 0;
+    right: 35px;
+  }
+
+  50% {
+    bottom: 0;
+    right: 50%;
+  }
+
+  100% {
+    bottom: 0;
+    right: 35px;
+  }
+}
+.header-content .header-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+.header-content .header-title h1 {
+  font-weight: 700;
+  font-size: 56px;
+  color: #e9ecf8;
+  text-transform: uppercase;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .header-content .header-title h1 {
+    font-size: 42px;
+    text-transform: capitalize;
+  }
+}
+.header .navbar {
+  z-index: 3;
+  background: #323b49 ;
 }
 .header nav .navbar-toggler {
   color: #2d333e;
