--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,6 +2,7 @@
 @import url(components/navbar-coins.css);
 @import url(components/navbar.css);
 @import url(components/sidebar.css);
+@import url(templates/games.css);
 
 /* Globalne Atrybuty */
 * {
