--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -2,7 +2,7 @@
   background: #323b49;
   position: relative;
   border: 2px solid #c3c6cfa4;
-  height: 100%;
+  height: 120vh;
 }
 .sidebar-logo img  {
   position: relative;
