--- a/src/styles/templates/games.css
+++ b/src/styles/templates/games.css
@@ -1,24 +1,48 @@
 .block {
     width: 100%;
     height: 100%;
+    margin: 20px 0;
     background: #323b49;
     overflow: hidden;
     color: #e9ecf8;
     border: 2px solid #c3c6cfa4;
 }
 .match-incoming {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: bold;
-    letter-spacing: 0.1rem;
+    margin-bottom: 10px;
+    color: #e9ecf8;
     text-transform: uppercase;
 }
-@media (max-width: 768px){
+@media (max-width: 1024px){
     .match-incoming {
-        font-size: 20px;
         text-transform: capitalize;
     }
 }
-.match-line {
-    opacity: 1;
+.match {
+    text-align: center;
+    border: 1px solid #c3c6cfa4;
+}
+.line {
     width: 25%;
+    margin: 0 auto;
+}
+.match-title {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px 0 0;
+    text-transform: uppercase;
+}
+@media (max-width: 768px){
+    .match-title  {
+        text-transform: capitalize;
+    }
+}
+
+.match-text {
+    margin: 0;
+    font-size: 16px;
+    padding: 10px;
+    font-weight: 700;
+    color: #c3c6cf;
 }
