--- a/src/styles/templates/games.css
+++ b/src/styles/templates/games.css
@@ -7,7 +7,7 @@
     color: #e9ecf8;
     border: 2px solid #c3c6cfa4;
 }
-.match-incoming {
+.block-header {
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 10px;
