--- a/src/styles/templates/games.css
+++ b/src/styles/templates/games.css
@@ -13,6 +13,16 @@
     margin-bottom: 10px;
     color: #e9ecf8;
     text-transform: uppercase;
+    position: relative;
+}
+.block-header::before {
+    content: "";
+    width: 300px;
+    height: 3px;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    background: #e9ecf844;
 }
 @media (max-width: 1024px){
     .match-incoming {
