--- a/src/styles/templates/games.css
+++ b/src/styles/templates/games.css
@@ -17,7 +17,8 @@
 }
 .block-header::before {
     content: "";
-    width: 300px;
+    width: 200px;
+    max-width: 100%;
     height: 3px;
     position: absolute;
     bottom: -5px;
@@ -25,7 +26,9 @@
     background: #e9ecf844;
 }
 @media (max-width: 1024px){
-    .match-incoming {
+    .block-header {
+        font-size: 24px;
+        padding: 5px 0;
         text-transform: capitalize;
     }
 }
