--- a/src/styles/components/sidebar-mobile.css
+++ b/src/styles/components/sidebar-mobile.css
@@ -65,3 +65,23 @@
     letter-spacing: 0.1rem;
     text-transform: uppercase;
 }
+.sidebar-input {
+  border-style: none;
+  width: 100%;
+  outline: none;
+  transition: 0.5s ease-in-out;
+  background-color: #eff2ff;
+}
+.sidebar-link-mobile {
+  font-size: 14px;
+  position: relative;
+  padding: 11px;
+  font-weight: bold;
+  display: flex;
+  letter-spacing: 0.1rem;
+  justify-content: center;
+  transition: 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #e9ecf8c0;
+}
