--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -98,7 +98,7 @@
 }
 .header .navbar {
   z-index: 3;
-  background: #323b49 ;
+  background-image: linear-gradient(90deg, rgba(50, 59, 73, 1) 0%, rgb(75, 84, 109) 100%);
 }
 .header nav .navbar-brand {
   font-size: 27px;
