--- a/src/styles/components/sidebar-mobile.css
+++ b/src/styles/components/sidebar-mobile.css
@@ -1,69 +1,77 @@
 .sidebar-mobile {
-    background: #323b49;
-    position: relative;
-    display: none;
+  background-image: linear-gradient(
+    90deg,
+    rgba(50, 59, 73, 1) 0%,
+    rgb(75, 84, 109) 100%
+  );
+  position: relative;
+  display: none;
+  border-radius: 0;
+  border: 2px solid #c3c6cfa4;
+}
+@media (max-width: 991px) {
+  .sidebar-mobile {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 120vh;
+    background-image: linear-gradient(
+      90deg,
+      rgba(50, 59, 73, 1) 0%,
+      rgb(75, 84, 109) 100%
+    );
+    transform: translateX(-100%);
     border-radius: 0;
-    border: 2px solid #c3c6cfa4;
+    transition: transform 0.65s cubic-bezier(0.215, 0.61, 0.355, 1);
+    z-index: 1000;
   }
-  @media (max-width: 991px) {
-    .sidebar-mobile {
-      position: absolute;
-      top: 0;
-      left: 0;
-      overflow: hidden;
-      bottom: 0;
-      right: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 120vh;
-      background: #323b49;
-      transform: translateX(-100%);
-      border-radius: 0;
-      transition: transform 0.65s cubic-bezier(0.215, 0.610, 0.355, 1);
-      z-index: 1000;
-    }
-    .sidebar-mobile.show {
-      transform: translateX(0);
-    }
+  .sidebar-mobile.show {
+    transform: translateX(0);
   }
+}
 .sidebar-mobile-logo img {
-    position: relative;
-    background: #222831;
-    /* top: -60px; */
-    width: 150px;
-    height: 150px;
-    margin: 20px 0;
-    border: 2px solid #e9ecf8;
-    border-radius: 50%;
+  position: relative;
+  background: #222831;
+  /* top: -60px; */
+  width: 150px;
+  height: 150px;
+  margin: 20px 0;
+  border: 2px solid #e9ecf8;
+  border-radius: 50%;
 }
 .sidebar-mobile-icon {
-    font-size: 30px;
-    position: absolute;
-    padding: 20px;
-    top: 0;
-    right: 0;
-    color: #e9ecf8;
+  font-size: 30px;
+  position: absolute;
+  padding: 20px;
+  top: 0;
+  right: 0;
+  color: #e9ecf8;
 }
 
 .sidebar-time #sidebarTimeMobile {
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    text-decoration: none;
-    font-size: 35px;
-    text-transform: uppercase;
-    color: #e9ecf8c0;
-  }
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  font-size: 35px;
+  text-transform: uppercase;
+  color: #e9ecf8c0;
+}
 
 .sidebar-time #sidebarWeeksMobile {
-    text-decoration: none;
-    font-size: 12px;
-    color: #e9ecf8c0;
-    font-weight: bolder;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  color: #e9ecf8c0;
+  font-weight: bolder;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 .sidebar-input {
   border-style: none;
