--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  background: #323b49;
+  background-image: linear-gradient(90deg, rgba(50, 59, 73, 1) 0%, rgb(75, 84, 109) 100%);
   position: relative;
   border-radius: 0px 50px 0px 0px;
   border: 2px solid #c3c6cfa4;
