--- a/src/styles/templates/blocks.css
+++ b/src/styles/templates/blocks.css
@@ -1,4 +1,4 @@
-/* Pierwszy blok nadchodzącego meczu */
+/* Pierwszy blok nadchodzącego meczu
 .match {
     background-image: linear-gradient(90deg, rgba(50, 59, 73, 1) 0%, rgb(75, 84, 109) 100%);
     position: relative;
@@ -70,4 +70,4 @@
     font-weight: 700;
     letter-spacing: 0.1rem;
     color: #dddee2c7;
-}
+} */
