--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ h6 {
 .header nav .nav-link {
   font-size: 14px;
   letter-spacing: 0.1rem;
+  padding: 10px;
+  cursor: pointer;
   position: relative;
   display: inline-block;
   text-transform: uppercase;
@@ -79,16 +81,16 @@ h6 {
   content: "";
   right: 0;
   top: 0;
-  border-top: 3px solid #eaece8;
-  border-right: 3px solid #e8eee5;
+  border-top: 3px solid #e9ecf8;
+  border-right: 3px solid #e9ecf8de;
   transform: translate(-100%, 50%);
 }
 .header nav .nav-link:after {
   content: "";
   left: 0;
   bottom: 0;
-  border-bottom: 3px solid #eaece8;
-  border-left: 3px solid #e8eee5;
+  border-bottom: 3px solid #e9ecf8;
+  border-left: 3px solid #e9ecf8de;
   transform: translate(100%, -50%);
 }
 .header nav .nav-link:hover:before,
@@ -348,133 +350,11 @@ h6 {
   font-size: 16px;
   text-align: justify;
 }
-/* Sekcja register */
-.register {
-  width: 100%;
-  height: 120vh;
-  position: relative;
-  background: url(src/img/home_bg22.jpg);
-  background-size: cover;
-  z-index: 2;
-  color: #d8dae4;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-@media (min-width: 1200px) {
-  .register {
-    background-attachment: fixed;
-  }
-}
-.register::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  box-shadow: inset 0px 95px 55px -40px #222831;
-}
-@media (min-width: 1440px) {
-  .register::before {
-    background-attachment: fixed;
-  }
-}
-.register::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.712);
-  backdrop-filter: blur(15px);
-  z-index: 0;
-  transform: translateX(-50%) rotate(0deg);
-  box-shadow: inset 0px -80px 75px -30px #222831;
-}
-
-.form-register {
-  background: linear-gradient(#222831, #36404ea1);
-  position: relative;
-  max-width: 800px;
-  width: 100%;
-  z-index: 2;
-  border: 2px solid #e9ecf827;
-  border-radius: 20px;
-}
-.form-register .form-title {
-  font-weight: 700;
-  font-size: 36px;
-  color: #e9ecf8;
-  text-align: center;
-  text-transform: uppercase;
-}
-@media (max-width: 768px) {
-  .form-register .form-title {
-    text-transform: capitalize;
-    font-size: 32px;
-  }
-}
-.form-register .form-group {
-  font-family: "Segoe UI", sans-serif;
-  position: relative;
-  color: #d8dae4;
-}
-.form-register .form-group .form-control {
-  font-size: 100%;
-  color: #d8dae4;
-  outline: none;
-  border: 2px solid #e9ecf87e;
-  background-color: transparent;
-  border-radius: 6px;
-  transition: 0.4s ease-in-out;
-  width: 100%;
-}
-.form-register .form-group .form-label {
-  color: #e9ecf8bd;
-}
-.form-register .form-group .form-control:focus,
-.form-control:valid {
-  outline: none;
-  border: 2px solid #e9ecf8;
-  box-shadow: none;
-}
-.form-register .form-group .form-control::placeholder {
-  color: #d8dae4;
-  opacity: 0.5;
-}
-.form-register .form-check-label {
-  color: #e9ecf8c2;
-}
-.form-register .form-check-label a {
-  text-decoration: none;
-  color: #e6e8f0;
-}
-.form-register .btr {
-  position: relative;
-  height: 3.5em;
-  border: 3px ridge #e9ecf87e;
-  border-radius: 6px;
-  outline: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  background-color: transparent;
-  color: #e9ecf8bd;
-  transition: .4s ease-in-out;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.form-register .btr:hover {
-  color: #e9ecf8;
-  border: 3px solid #e9ecf8;
-}
 /* Stopek */
 .footer {
   position: relative;
+  width: 100%;
+  max-width: 100%;
   background: #222831;
   color: #d8dae4;
   z-index: 2;
