--- a/src/styles/regulamin.css
+++ b/src/styles/regulamin.css
@@ -136,6 +136,7 @@ h6 {
   opacity: 0.75;
   border-radius: 100%;
   z-index: -2;
+  box-shadow: inset 0px -80px 75px -30px #222831;
 }
 
 @media (max-width: 768px) {
@@ -163,6 +164,7 @@ h6 {
     rgba(0, 0, 0, 0.562)
   );
   z-index: 0;
+  box-shadow: inset 0px -80px 75px -30px #222831;
   transform: translateX(-50%) rotate(0deg);
 }
 .hero .content {
